further adjustments and spacing fixes

--- a/css/style.css
+++ b/css/style.css
@@ -31,13 +31,12 @@ nav {
     height: 100px;
     display: flex;
     align-items: center;
-    gap: 20px;
     justify-content: center;
-    transform: translateX(35px)
 }
 
 .logo img {
     height: 70px;
+    transform: translateX(35px);
 }
 
 nav ul {
